--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,14 @@
 .answerButtons {
-	width: 200px;
-	height: 100px;
+	width: 150px;
+	height: 50px;
+}
+
+body {
+	background-image: url(../images/tecmobowl5.png);
+}
+
+.gamePlay {
+	
+		background-color: gray;
+		border: solid;
 }
